<resources>
    <string name="app_name">Magic Plate UHF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MagicPlate UHF</string>
    <string name="nav_header_subtitle">https://konbinisg.com</string>
    <string name="nav_header_subtitle_version">Version:0.0.1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_save">&#160;&#160;Save</string>
    <string name="action_sync">&#160;&#160;Sync All</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_menus">Menus</string>
    <string name="menu_plate_models">Plate Models</string>
    <string name="menu_products">Products</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_diagnostic">Diagnostic</string>
    <string name="menu_time_blocks">Time Blocks</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_options">Options</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_write_tags">Write Tags</string>
    <string name="menu_register_tags">Register Tags</string>
    <string name="menu_users">Users</string>
    <string name="menu_discounts">Discount</string>
    <string name="title_company">Company</string>
    <string name="title_company_logo">Logo</string>
    <string name="title_company_name">Name</string>
    <string name="title_company_tel">Tel</string>
    <string name="title_company_email">Email</string>
    <string name="title_company_address">Address</string>
    <string name="title_machine">Machine</string>
    <string name="title_machine_pin_code">PinCode</string>
    <string name="title_machine_mac_address">MacAddress</string>
    <string name="title_machine_source">Source</string>
    <string name="title_machine_terminal">Terminal</string>
    <string name="title_machine_store">Store</string>
    <string name="title_cloud">Cloud</string>
    <string name="title_cloud_host">Host</string>
    <string name="title_cloud_consumer_key">Consumer Key(Woocommerce)</string>
    <string name="title_cloud_consumer_secret">Consumer Secret(Woocommerce)</string>
    <string name="title_cloud_client_id">Client ID(Woocommerce)</string>
    <string name="title_cloud_client_secret">Client Secret(Woocommerce)</string>
    <string name="title_cloud_order_status">Order Status</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_wallet_host">Host</string>
    <string name="title_wallet_client_id">Client ID(OAuth 2.0)</string>
    <string name="title_wallet_client_secret">Client Secret(OAuth 2.0)</string>
    <string name="title_mqtt">MQTT</string>
    <string name="title_mqtt_host">Host</string>
    <string name="title_mqtt_user_name">Username</string>
    <string name="title_mqtt_password">Password</string>
    <string name="title_mqtt_topic">Topic</string>
    <string name="title_alert_telegram">Alert Telegram</string>
    <string name="title_alert_telegram_user_name">UserName</string>
    <string name="title_alert_telegram_token">Token</string>
    <string name="title_alert_telegram_group">Group</string>
    <string name="title_alert_slack">Alert Slack</string>
    <string name="title_alert_slack_webhook">Webhook</string>
    <string name="title_pos">POS</string>
    <string name="title_magic_plate_mode">Magic Plate Mode</string>
    <string name="title_self_kiosk_mode">Self Kiosk Mode</string>
    <string name="title_payment">Payment</string>
    <string name="title_payment_mode">Payment Mode</string>
    <string name="title_payment_device_type">Payment Device Type</string>
    <string name="title_payment_device_comport">Payment Device Comport</string>
    <string name="title_iuc">IUC</string>
    <string name="title_im30">IM30</string>
    <string name="title_ez_link">EzLink</string>
    <string name="title_master_card">MasterCard</string>
    <string name="title_pay_now">PayNow</string>
    <string name="title_cash">Cash</string>
    <string name="title_reader_asc">Reader ASC</string>
    <string name="title_black">Black</string>
    <string name="title_white">White</string>
    <string name="title_alert">Alert</string>
    <string name="title_customize">Customize</string>
    <string name="title_sync_order_realtime">Sync Order Realtime</string>
    <string name="title_admin_cancel_payment">Allow Admin cancel payment</string>
    <string name="title_admin_cash_payment_approval">Allow Admin cash payment approval</string>
    <string name="title_admin_discount_approval">Allow Admin discount approval</string>
    <string name="message_allow_admin_cash_payment_approval_unchecked">Allow admin cash payment approval is unchecked !!!</string>
    <string name="title_searching">Search...</string>
    <string name="title_index">No.</string>
    <string name="title_id">ID</string>
    <string name="title_date">Date</string>
    <string name="title_image">Image</string>
    <string name="title_action">Action</string>
    <string name="title_product_name">Product Name</string>
    <string name="title_category">Category</string>
    <string name="title_price">Price</string>
    <string name="title_sale_price">Sale Price</string>
    <string name="title_barcode">Barcode</string>
    <string name="title_epc">EPC</string>
    <string name="title_plate_code">Plate Code</string>
    <string name="title_plate_name">Plate Name</string>
    <string name="title_time_block">Time Block</string>
    <string name="title_to_hour">To Hour</string>
    <string name="title_from_hour">From Hour</string>
    <string name="title_quantity">Quantity</string>
    <string name="title_actions">Actions</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_total">Total</string>
    <string name="title_clear">Clear</string>
    <string name="title_enter">Enter</string>
    <string name="title_accept">Accept</string>
    <string name="title_write_tags">Write %s Tags</string>
    <string name="title_register_tags">Register %s Tags</string>
    <string name="title_register_failed">Register failed</string>
    <string name="title_custom_price">Custom Price</string>
    <string name="title_expired_custom_price">Expired custom price</string>
    <string name="title_not_allow_wallet_non_rfid">Do not allow wallet payments with non-RFID</string>
    <string name="title_count_n_tags">Counts: %s Tags</string>
    <string name="title_sync_transactions">Sync Transactions</string>
    <string name="title_sync_order_periodic_per_time_period">Sync Orders Periodic per time period</string>
    <string name="title_sync_order_specific_time">Sync Orders with Specific Time</string>
    <string name="title_no_sync_orders">No Sync Orders</string>
    <string name="title_hardware">Hardware</string>
    <string name="title_native_port">Native Port</string>
    <string name="title_timer">Timer</string>
    <string name="title_hour">Hour</string>
    <string name="title_minute">Minute</string>
    <string name="title_days">Days</string>
    <string name="title_x_day_store_local_orders">Store X days of local transactions</string>
    <string name="title_x_day_store_local_menus">Store X days of expired Menus</string>
    <string name="title_periodic_get_token">Periodic Get Token</string>
    <string name="title_uhf_reader">UHF Reader</string>
    <string name="title_display_name">Display Name</string>
    <string name="title_role">Role</string>
    <string name="title_roles">Roles</string>
    <string name="title_ccw_id">CCW ID</string>
    <string name="title_ccw_id1">CCW ID1</string>
    <string name="title_ccw_id2">CCW ID2</string>
    <string name="title_ccw_id3">CCW ID3</string>
    <string name="title_add_new">Add New</string>
    <string name="title_discount_type">Discount Type</string>
    <string name="title_roles_will_apply_discounts">Roles will apply discounts</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_serial_number">Serial Number</string>
    <string name="title_ignore_when_removing_tags">Ignore when removing tags</string>
    <string name="title_show_cancel_payment_button">Show Cancel Payment Button</string>
    <string name="title_plate_last_serial_number">Last Serial Number</string>
    <string name="title_receipt_width_paper">Receipt Width Paper</string>
    <string name="title_receipt_header">Receipt Header</string>
    <string name="title_receipt_footer">Receipt Footer</string>
    <string name="title_printer">Receipt Printer</string>
    <string name="title_tcp">TCP</string>
    <string name="title_usb">USB</string>
    <string name="title_nfc">NFC</string>
    <string name="title_discount">Discount</string>
    <string name="title_discount_with_format">Discount With Format</string>
    <string name="title_discount_mode">Discount Mode</string>
    <string name="title_add_picture">Add Picture</string>
    <string name="title_remove_picture">Remove Picture</string>
    <string name="title_length">Length</string>
    <string name="title_prefix">Prefix</string>
    <string name="title_suffixes">Suffixes</string>
    <string name="title_restart">Restart</string>
    <string name="title_shutdown">Shutdown</string>
    <string name="title_shortcut">Shortcut</string>
    <string name="title_shortcut_top_up">Shortcut TopUp</string>
    <string name="title_category_name">Category Name</string>
    <string name="message_loading">Loading…</string>
    <string name="message_processing">Processing…</string>
    <string name="message_syncing">Syncing Data…</string>
    <string name="message_select_to_date">Select to date</string>
    <string name="message_select_from_date">Select from date</string>
    <string name="message_put_plate_on_the_tray">1. Place tray down \n 2. Select payment mode \n 3. Make payment</string>
    <string name="message_enter_pin_code">Enter Pin Code</string>
    <string name="message_enter_new_custom_price">Enter new custom price !!!</string>
    <string name="message_please_tap_card">Please tap card !!!</string>
    <string name="message_please_tap_card_in_seconds">Please tap card in %s seconds!!!</string>
    <string name="message_please_tap_card_again">Please tap card again !!!</string>
    <string name="message_success_save">Save Success !!!</string>
    <string name="message_success_write_tags">Write Tags Success !!!</string>
    <string name="message_success_register_tags">Register Tags Success !!!</string>
    <string name="message_success_sync">Sync Success !!!</string>
    <string name="message_success_register">Register Success !!!</string>
    <string name="message_success_login">Login Success !!!</string>
    <string name="message_success_payment">Payment Success !!! \n Total Paid %s</string>
    <string name="message_success_payment_balance">Payment Success !!! \n Total Paid %s \n Balance: %s</string>
    <string name="message_success_sync_order">Sync Order #%s Success !!!</string>
    <string name="message_success_reset_reader">Reset Reader Success !!!</string>
    <string name="message_success_set_rf_output_power">Set RF Output Power Success !!!</string>
    <string name="message_warning_date_is_required">Please select from date to date!!!</string>
    <string name="message_warning_date_wrong_format">Date is wrong format!!!</string>
    <string name="message_warning_cart_is_empty">Cart is empty !!!</string>
    <string name="message_warning_new_plate_code_required">New Plate Model Code is required !!!</string>
    <string name="message_error_sync_item">Sync %s Error !!!</string>
    <string name="message_error_register">Register Error !!!</string>
    <string name="message_error_login">Login Error !!!</string>
    <string name="message_error_get_token">The client credentials are invalid !!!</string>
    <string name="message_error_write_data_format">Write Data format error !!!</string>
</resources>